--- a/README.adoc
+++ b/README.adoc
@@ -86,7 +86,7 @@ include::{common-includes}/gitclone.adoc[]
 
 == Building your application
 
-Before you being, build your application. To do this, navigate to the `start` directory and run the Maven 
+Before you begin, build your application. To do this, navigate to the `start` directory and run the Maven 
 `clean` and `install` goals:
 
 [role="no_copy"]
