--- a/README.adoc
+++ b/README.adoc
@@ -162,8 +162,8 @@ as the Dockerfile to its build context, making them available for use in instruc
 To make image building faster, add all files and directories that aren't necessary for building your
 image to a `.dockerignore` file. This excludes them from the build context.
 
-A `.dockerignore` file is available to you in the `start` directory. This file includes the `app`
-directory and some system files. Feel free to add anything else that you want to exclude
+A `.dockerignore` file is available to you in the `start` directory. This file includes the `src`
+directory, the `pom.xml` file, and some system files. Feel free to add anything else that you want to exclude
 
 
 // =================================================================================================
