--- a/README.adoc
+++ b/README.adoc
@@ -17,6 +17,9 @@
 :source-highlighter: prettify
 = Using Docker containers to develop microservices
 
+[.hidden]
+NOTE: This repository contains the guide documentation source. To view the guide in published form, view it on the https://openliberty.io/guides/{projectid}.html[Open Liberty website].
+
 Learn how to containerize a microservice with Docker for iterative development
 
 // =================================================================================================
