--- a/README.adoc
+++ b/README.adoc
@@ -65,8 +65,8 @@ Learn more about containers on the official Docker page: https://www.docker.com/
 
 Consider a scenario where you need to deploy your application on another environment. Your application
 works on your local machine, but when you try to run it on a different environment, it breaks. You do
-some debugging and discover that you built your application with Python 3,
-but this new environment has only Python 2.7 installed. Although this issue is generally easy to fix,
+some debugging and discover that you built your application with Java 8,
+but this new environment has only Java 6 installed. Although this issue is generally easy to fix,
 you don't want your application to be missing dozens of version-specific dependencies.
 You can create a virtual machine specifically for testing your application, but VM images generally
 take up a huge amount of space and are slow to run.
@@ -75,8 +75,8 @@ To solve the problem, you can containerize your application by
 bundling it together with the entire environment that it needs to run. You can then run this container
 on any machine that is running Docker regardless of how that machine's environment is set up. You can also run multiple
 containers on a single machine in isolation from one another so that two containers that have different
-versions of Python do not interfere with each other. Containers are quick to run compared to individual VMs,
-and they take up only a fraction of the memory of a single image.
+versions of Java do not interfere with each other. Containers are quick to run compared to individual VMs,
+and they take up only a fraction of the memory of a single virtual machine image.
 
 // =================================================================================================
 // Getting Started
