--- a/README.adoc
+++ b/README.adoc
@@ -6,7 +6,7 @@
 // Contributors:
 //     IBM Corporation
 :projectid: docker
-:page-layout: guide
+:page-layout: guide-multipane
 :page-duration: 20 minutes
 :page-description: Learn how to containerize a microservice with Docker for iterative development
 :page-releasedate: 2017-12-27
@@ -135,9 +135,12 @@ container. Every Dockerfile begins with a parent or base image on top of which v
 are run. For example, you can start your image from scratch and execute commands that download and
 install Java, or you can start from an image that already contains a Java installation.
 
+[role="code_command hotspot=1-16",subs="quotes"]
+----
 Create a regular `start/Dockerfile` file:
+----
 
-[source, indent=0]
+[source, indent=0, role="code_column"]
 ----
 include::finish/Dockerfile[tags=**]
 ----
