--- a/README.adoc
+++ b/README.adoc
@@ -105,6 +105,10 @@ include::finish/pom.xml[tags=**]
 ```
 mvn clean install
 ```
+[role="code_command hotspot=1-228"]
+----
+Take a look at your `pom.xml` file.
+----
 Your `pom.xml` file is already configured to add your REST application to the `defaultServer` server.
 
 But you can tweak this configuration or add your own for another server [hotspot=163-174]`here`.
@@ -128,7 +132,7 @@ install Java, or you can start from an image that already contains a Java instal
 
 [role="code_command hotspot=1-9",subs="quotes"]
 ----
-Create the Docker file.
+Create the `Docker` file.
 `start/Dockerfile`
 ----
 Dockerfile
@@ -307,7 +311,7 @@ If your container is running without problems, point your browser to `http://loc
 where you can see a JSON file that contains the system properties of the JVM in your container.
 [role="code_command hotspot=1-36", subs="quotes"]
 ----
-Edit the Properties Resource class file.
+Edit the `Properties Resource` class file.
 `start/src/main/java/io/openliberty/guides/rest/PropertiesResource.java`
 ----
 PropertiesResource.java
