--- a/README.adoc
+++ b/README.adoc
@@ -103,7 +103,7 @@ mvn clean install
 Your [hotspot=1-228]`pom.xml` file is already configured to add your REST application to the `defaultServer` server.
 pom.xml
 
-But you can tweak this configuration or add your own for another server by updating the [hotspot=163-174]`</execution>` element.
+But you can tweak this configuration or add your own for another server by updating the [hotspot=163-174]`<execution/>` element.
 
 The [hotspot=166-168]`install-apps` goal copies the application into the specified directory of the specified server.
 In this case, the goal copies the `rest.war` file into the `apps` directory of the `defaultServer` server.
@@ -310,7 +310,7 @@ If your container is running without problems, point your browser to `http://loc
 where you can see a JSON file that contains the system properties of the JVM in your container.
 [role="code_command hotspot=1-36", subs="quotes"]
 ----
-Edit the `Properties Resource` class file.
+Edit the `PropertiesResource` class.
 `start/src/main/java/io/openliberty/guides/rest/PropertiesResource.java`
 ----
 PropertiesResource.java
@@ -319,8 +319,8 @@ PropertiesResource.java
 include::finish/src/main/java/io/openliberty/guides/rest/PropertiesResource.java[tags=**;!comment]
 ----
 
-Change the endpoint of your application from [hotspot=18]`/properties` to `/properties-new` by replacing the `PropertiesResource.java` class and changing the `@Path`
-annotation to `"properties-new"`.*
+Change the endpoint of your application from [hotspot=18]`/properties` to `/properties-new` by changing the `@Path`
+annotation to `"properties-new"`.
 
 To see these changes reflected in the container, run the `mvn package` command from the command line to
 rebuild your application and point your browser to `http://localhost:9080/LibertyProject/System/properties-new`.
