--- a/README.adoc
+++ b/README.adoc
@@ -104,10 +104,9 @@ Before you begin, build your application. To do this, navigate to the `start` di
 mvn clean install
 ```
 
-Your [hotspot=1-228]`pom.xml` file is already configured to add your REST application to the `defaultServer` server.
-pom.xml
+Your [hotspot=1-228]`pom.xml` file is already configured to add your REST application to the `defaultServer`.
 
-But you can tweak this configuration or add your own for another server by updating the [hotspot=154-162]`<execution/>` element.
+But you can tweak this configuration or add your own for another server by updating the [hotspot=152-163]`<execution/>` element.
 
 Learn more about this goal on the official https://github.com/WASdev/ci.maven/blob/master/docs/install-apps.md[Maven Liberty plug-in repository].
 
@@ -150,7 +149,7 @@ The [hotspot=5]`RUN` instruction executes various shell commands in a new layer 
 In this case, you create a symlink between the `/opt/ol/wlp/usr/servers` directory and the `/servers`
 directory. This way, you can mount your servers more easily because you don't need to use long path names.
 
-The [hotspot=9]`CMD` and [hotspot=8]`ENTRYPOINT` instructions define a default command that executes when the image runs as
+The [hotspot=8]`ENTRYPOINT` and [hotspot=9]`CMD` instructions define a default command that executes when the image runs as
 a container. These two instructions function the same way, except that the `CMD` instruction is overridden
 with any arguments that are passed at the end of the `docker run` command. In contrast, the
 `ENTRYPOINT` instruction requires the `--entrypoint` flag to be overridden. In this case, you use
@@ -309,7 +308,7 @@ To view a full list of all available containers, run the `docker ps -a` command 
 
 If your container is running without problems, point your browser to `http://localhost:9080/LibertyProject/System/properties`,
 where you can see a JSON file that contains the system properties of the JVM in your container.
-[role="code_command hotspot=20-36", subs="quotes"]
+[role="code_command hotspot=19-36", subs="quotes"]
 ----
 Edit the `PropertiesResource` class.
 `start/src/main/java/io/openliberty/guides/rest/PropertiesResource.java`
@@ -320,7 +319,7 @@ PropertiesResource.java
 include::finish/src/main/java/io/openliberty/guides/rest/PropertiesResource.java[tags=**;!comment]
 ----
 
-Change the endpoint of your application from [hotspot=18]`/properties` to `/properties-new` by changing the `@Path`
+Change the endpoint of your application from [hotspot=18]`properties` to `properties-new` by changing the `@Path`
 annotation to `"properties-new"`.
 
 To see these changes reflected in the container, run the `mvn package` command from the command line to
