--- a/README.adoc
+++ b/README.adoc
@@ -99,9 +99,7 @@ Before you begin, build your application. To do this, navigate to the `start` di
 mvn clean install
 ```
 
-Your [hotspot=1-228]`pom.xml` file is already configured to add your REST application to the `defaultServer`.
-
-But you can tweak this configuration or add your own for another server by updating the [hotspot=154-163]`<execution/>` element.
+Your [hotspot=1-228]`pom.xml` file is already configured to add your REST application to the `defaultServer`. But you can tweak this configuration or add your own for another server by updating the [hotspot=156-163]`<execution/>` element.
 
 Learn more about this goal on the official https://github.com/WASdev/ci.maven/blob/master/docs/install-apps.md[Maven Liberty plug-in repository].
 
@@ -123,7 +121,7 @@ install Java, or you can start from an image that already contains a Java instal
 
 [role="code_command hotspot=1-9",subs="quotes"]
 ----
-Create the `Docker` file.
+Create the `Dockerfile`.
 `start/Dockerfile`
 ----
 Dockerfile
